--- a/arch/arm/boot/dts/qcom/tulip/sdm660-tulip.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/sdm660-tulip.dtsi
@@ -19,7 +19,7 @@
 				dev = "/dev/block/platform/soc/c0c4000.sdhci/by-name/system";
 				type = "ext4";
 				mnt_flags = "ro,barrier=1";
-				fsmgr_flags = "wait";
+				fsmgr_flags = "wait,discard,noatime,nodiratime";
 				status = "ok";
 			};
 
@@ -28,7 +28,7 @@
 				dev = "/dev/block/platform/soc/c0c4000.sdhci/by-name/vendor";
 				type = "ext4";
 				mnt_flags = "ro,barrier=1";
-				fsmgr_flags = "wait";
+				fsmgr_flags = "wait,discard,noatime,nodiratime";
 				status = "ok";
 			};
 		};
