--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -98,6 +98,12 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=64
+CONFIG_INPUT_BOOST_FREQ_LP=1036800
+CONFIG_INPUT_BOOST_FREQ_PERF=1132800
+CONFIG_MAX_BOOST_FREQ_LP=1900800
+CONFIG_MAX_BOOST_FREQ_PERF=1958400
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
