--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -306,18 +306,16 @@ CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21 is not set
+CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_NVT_A=y
 CONFIG_TOUCHSCREEN_FOCAL_FT8719=y
-CONFIG_TOUCHSCREEN_FTS=y
-CONFIG_FINGERPRINT_FPC1020=y
-CONFIG_FINGERPRINT_GF3258=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_STMVL53L0=y
+CONFIG_FINGERPRINT_FPC1020=y
+CONFIG_FINGERPRINT_GF3258=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -362,6 +360,7 @@ CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_CPU_THERMAL=y
+CONFIG_THERMAL_SWITCH=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
 CONFIG_THERMAL_MONITOR=y
@@ -373,10 +372,6 @@ CONFIG_MFD_SPMI_PMIC=y
 CONFIG_MFD_I2C_PMIC=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_WCD934X_CODEC=y
-CONFIG_SND_SOC_TAS2557=y
-CONFIG_TAS2557_REGMAP=y
-CONFIG_TAS2557_CODEC=y
-CONFIG_TAS2557_MISC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_MSM_GFX_LDO=y
@@ -457,6 +452,10 @@ CONFIG_SND_USB_AUDIO_QMI=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8998=y
 CONFIG_SND_SOC_660=y
+CONFIG_SND_SOC_TAS2557=y
+CONFIG_TAS2557_REGMAP=y
+CONFIG_TAS2557_CODEC=y
+CONFIG_TAS2557_MISC=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_ELECOM=y
@@ -532,7 +531,6 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
 CONFIG_QCOM_VOWIFI_11R=y
@@ -569,8 +567,6 @@ CONFIG_RMNET_IPA3=y
 CONFIG_GPIO_USB_DETECT=y
 CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
-CONFIG_MACH_XIAOMI=y
-CONFIG_MACH_XIAOMI_SDM660=y
 CONFIG_MACH_XIAOMI_TULIP=y
 CONFIG_QCOM_CLK_SMD_RPM=y
 CONFIG_MSM_GPUCC_660=y
