ARM: dts: tulip: sync led changes from LOS tree
* this change for rom based new los sdm660 tree
* led will not work in old device tree or old los light HAL.

  commit 4797d7e60e42624970ddbc24fa160c7d44da1dfd
  Author: Davide Garberi <>
  Date:   Wed Jan 8 21:35:32 2020 +0100

      ARM: dts: xiaomi: Commonize LED configuration

      dts: xiaomi: Set use-blink for led
      dts: xiaomi: rewrite notification led configuration
      dts: xiaomi: Rename led node to white

      Change-Id: I0ca1ce1d87b58b9c990e7e08cf0b048484ea15d8

Change-Id: I1aa5fc682fe58bb968af25df8247cad441cc7381

--- a/arch/arm/boot/dts/qcom/tulip/pm660-tulip.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/pm660-tulip.dtsi
@@ -63,13 +63,16 @@
 	qcom,fg-recharge-voltage = <4340>;
 };
 
-/* msm-pm660l.dtsi tulip specific diff */
+/* Red led was used for powersupply of White led */
 &red_led {
-	qcom,ramp-step-ms = <128>;
-	qcom,idx-len = <26>;
-	qcom,duty-pcts =
-		[3C 3C 3B 3A 3B 37 35 33 31 2E 2A 27 23
-		1F 1B 17 13 0E 09 05 00 00 00 00 00 00];
+	linux,name = "white";
+	qcom,duty-pcts = [ 00 0E 1C 2A 38 46 54 64 ];
+	qcom,idx-len = <8>;
+	qcom,pause-lo = <500>;
+	qcom,pause-hi = <500>;
+	qcom,ramp-step-ms = <50>;
+	qcom,lut-flags = <31>; /* loop, ramp up, reverse, pause hi, pause lo */
+	qcom,use-blink;
 };
 
 &pm660l_wled {
