--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -325,6 +325,7 @@ CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_NVT_A=y
 CONFIG_TOUCHSCREEN_FOCAL_FT8719=y
