--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -35,6 +35,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_FRAME_WARN=0
 CONFIG_KALLSYMS_ALL=y
 # CONFIG_MEMBARRIER is not set
 CONFIG_EMBEDDED=y
