--- a/drivers/input/fingerprint/Kconfig
+++ b/drivers/input/fingerprint/Kconfig
@@ -1,6 +1,16 @@
-menu "Fingerprint Drivers"
+#
+# Fingerprint driver configuration
+#
 
-source "drivers/input/fingerprint/fpc1020/Kconfig"
-source "drivers/input/fingerprint/gf3258/Kconfig"
+menuconfig INPUT_FINGERPRINT
+	bool "Fingerprints"
+	help
+	  Say Y here, and a list of supported fingerprints will be displayed.
+	  This option doesn't affect the kernel.
 
-endmenu
+	  If unsure, say Y.
+
+if INPUT_FINGERPRINT
+source "drivers/input/fingerprint/fpc/Kconfig"
+source "drivers/input/fingerprint/goodix/Kconfig"
+endif
