--- a/drivers/input/fingerprint/Makefile
+++ b/drivers/input/fingerprint/Makefile
@@ -1,2 +1,2 @@
-obj-$(CONFIG_FINGERPRINT_FPC1020) += fpc1020/
-obj-$(CONFIG_FINGERPRINT_GF3258) += gf3258/
+obj-$(CONFIG_FPC_FINGERPRINT)		+= fpc/
+obj-$(CONFIG_GOODIX_FINGERPRINT)	+= goodix/
