--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -100,6 +100,7 @@ CONFIG_CPU_FREQ=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
 CONFIG_INPUT_BOOST_FREQ_LP=1036800
