arm: dts: sdm660: energy model sync with caf changes
Signed-off-by: Oktapra Amtono <oktapra.amtono@gmail.com>

--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -57,6 +57,7 @@
 			qcom,ea = <&ea0>;
 			efficiency = <1024>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1024>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L2_0: l2-cache {
@@ -89,6 +90,7 @@
 			qcom,ea = <&ea1>;
 			efficiency = <1024>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1024>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_1: l1-icache {
@@ -115,6 +117,7 @@
 			qcom,ea = <&ea2>;
 			efficiency = <1024>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1024>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_2: l1-icache {
@@ -141,6 +144,7 @@
 			qcom,ea = <&ea3>;
 			efficiency = <1024>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1024>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_3: l1-icache {
@@ -167,6 +171,7 @@
 			qcom,ea = <&ea4>;
 			efficiency = <1638>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1638>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L2_1: l2-cache {
@@ -197,6 +202,7 @@
 			qcom,ea = <&ea5>;
 			efficiency = <1638>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1638>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_101: l1-icache {
@@ -223,6 +229,7 @@
 			qcom,ea = <&ea6>;
 			efficiency = <1638>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1638>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_102: l1-icache {
@@ -249,6 +256,7 @@
 			qcom,ea = <&ea7>;
 			efficiency = <1638>;
 			freq-energy-model;
+			capacity-dmips-mhz = <1638>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_103: l1-icache {
