gitignore: Ignore some unneeded folders
Why do we ignore the folder out, clang-11.0, toolchain32, toolchain64, AnyKernel, for fear that these 4 folders come to upload if you make changes in another source. And if both of these folders come to upload and require more internet.

Signed-off-by: Fiqri Ardyansyah <fiqri15072019@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,10 @@ all.config
 
 # fetched Android config fragments
 android/configs/android-*.cfg
+
+# Ignore unneeded folders
+AnyKernel/
+clang/
+out/
+toolchain32/
+toolchain64/
