--- a/arch/arm/boot/dts/qcom/tulip/sdm660-tulip-base.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/sdm660-tulip-base.dtsi
@@ -18,6 +18,42 @@
 #include "sdm660-tulip-ramoops.dtsi"
 
 /* sdm660.dtsi tulip specific diff */
+/ {
+	cpus {
+		CPU0: cpu@0 {
+			clock-frequency = <1612800000>;
+		};
+
+		CPU1: cpu@1 {
+			clock-frequency = <1612800000>;
+		};
+
+		CPU2: cpu@2 {
+			clock-frequency = <1612800000>;
+		};
+
+		CPU3: cpu@3 {
+			clock-frequency = <1612800000>;
+		};
+
+		CPU4: cpu@100 {
+			clock-frequency = <1804800000>;
+		};
+
+		CPU5: cpu@101 {
+			clock-frequency = <1804800000>;
+		};
+
+		CPU6: cpu@102 {
+			clock-frequency = <1804800000>;
+		};
+
+		CPU7: cpu@103 {
+			clock-frequency = <1804800000>;
+		};
+	};
+};
+
 &soc {
 	/delete-node/ qcom,qbt1000;
 
