--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-STRIX-HMP-Q-v1.9"
+CONFIG_LOCALVERSION="-STRIX-EAS-Q-v2.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
