arm64/configs: tulip: Enable energy & legacy model
Signed-off-by: Fiqri Ardyansyah <fiqri15072019@gmail.com>

--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -94,6 +94,8 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_ENERGY_MODEL=y
+CONFIG_LEGACY_ENERGY_MODEL_DT=y
 CONFIG_CPU_FREQ=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
