--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -17,6 +17,7 @@ CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
+CONFIG_PELT_HALFLIFE_16=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
