--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -112,6 +112,10 @@ CONFIG_INPUT_BOOST_FREQ_LP=1036800
 CONFIG_INPUT_BOOST_FREQ_PERF=1132800
 CONFIG_MAX_BOOST_FREQ_LP=1900800
 CONFIG_MAX_BOOST_FREQ_PERF=1958400
+CONFIG_DSBOOST=y
+CONFIG_INPUT_BOOST_DURATION=256
+CONFIG_INPUT_STUNE_BOOST=50
+CONFIG_SCHED_STUNE_BOOST=10
 # CONFIG_CPU_BOOST is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
