--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,10 @@ android/configs/android-*.cfg
 #Ignoring Android.bp link file
 #
 Android.bp
+
+# Ignore unneeded folders
+AnyKernel3/
+clang/
+out/
+toolchain32/
+toolchain64/
