--- a/drivers/input/Makefile
+++ b/drivers/input/Makefile
@@ -29,4 +29,5 @@ obj-$(CONFIG_INPUT_APMPOWER)	+= apm-power.o
 obj-$(CONFIG_INPUT_KEYRESET)	+= keyreset.o
 obj-$(CONFIG_INPUT_KEYCOMBO)	+= keycombo.o
 obj-$(CONFIG_INPUT_HALL_SENSOR_E7S)	+= hall_e7s.o
+obj-$(CONFIG_INPUT_FINGERPRINT)				+= fingerprint/
 obj-y   += sensors/bmi160/
