--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-STRIX-EAS-Q-v2.2"
 CONFIG_LOCALVERSION_AUTO=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
