ARM: dts: tulip: Update GPU Chip ID to use Adreno 512
Signed-off-by: Fiqri Ardyansyah <fiqri15072019@gmail.com>

--- a/arch/arm/boot/dts/qcom/tulip/sdm636-tulip.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/sdm636-tulip.dtsi
@@ -100,3 +100,8 @@
 	qcom,actuator-type = "erm";
 	qcom,vmax-mv = <3000>;
 };
+
+/* sdm636.dtsi tulip specific diff */
+&msm_gpu {
+	qcom,chipid = <0x05010200>;
+};
