--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -140,7 +140,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # CONFIG_PELT_HALFLIFE_32 is not set
 # CONFIG_PELT_HALFLIFE_16 is not set
-# CONFIG_PELT_HALFLIFE_12 is not set
+CONFIG_PELT_HALFLIFE_12=y
 # CONFIG_PELT_HALFLIFE_8 is not set
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
