--- a/arch/arm/boot/dts/qcom/tulip/batterydata/fg-gen3-batterydata-l6660atl-4000mah.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/batterydata/fg-gen3-batterydata-l6660atl-4000mah.dtsi
@@ -3,6 +3,7 @@ qcom,3440255_longcheer_l6660atl_4000mah_averaged_masterslave_may15th2018 {
 	qcom, = <24>;
 	qcom,max-voltage-uv = <4408000>;
 	qcom,fg-cc-cv-threshold-mv = <4398>;
+	qcom,fcc-max-ua = <2500000>;
 	qcom,fastchg-current-ma = <2500>;
 	qcom,nom-batt-capacity-mah = <4000>;
 	qcom,batt-id-kohm = <200>;
