--- a/arch/arm/boot/dts/qcom/tulip/batterydata/fg-gen3-batterydata-l6660cos-4000mah.dtsi
+++ b/arch/arm/boot/dts/qcom/tulip/batterydata/fg-gen3-batterydata-l6660cos-4000mah.dtsi
@@ -3,6 +3,7 @@ qcom,3383405_longcheer_l6660cos_4000mah_averaged_masterslave_apr2nd2018 {
 	qcom, = <24>;
 	qcom,max-voltage-uv = <4408000>;
 	qcom,fg-cc-cv-threshold-mv = <4398>;
+	qcom,fcc-max-ua = <2500000>;
 	qcom,fastchg-current-ma = <2500>;
 	qcom,nom-batt-capacity-mah = <4000>;
 	qcom,batt-id-kohm = <100>;
